--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="天天钢琴；钢琴练习">
-    <meta name="author" content="天天钢琴">
+    <meta name="description" content="天天钢琴；钢琴之家；钢琴练习；">
+    <meta name="author" content="天天钢琴；钢琴之家；钢琴练习；">
 
     <title>天天钢琴</title>
 
@@ -15,169 +15,147 @@
 
     <!-- Custom fonts for this template -->
     <link href="/public/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
+          type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
     <link href="/public/css/clean-blog.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
+<script>
+	!(function (c, b, d, a) {
+		c[a] || (c[a] = {});
+		c[a].config = { pid: 'bzupuplqoz@67bedc28b034eaa', imgUrl: 'https://arms-retcode.aliyuncs.com/r.png?' };
+		with (b) with (body) with (insertBefore(createElement('script'), firstChild)) setAttribute('crossorigin', '', src = d)
+	})(window, document, 'https://retcode.alicdn.com/retcode/bl.js', '__bl');
+</script>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
         <a class="navbar-brand" href="index.ejs">天天钢琴</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+            Menu
+            <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/">首页</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">关于</a>
-            </li>
-            <!--<li class="nav-item">-->
-              <!--<a class="nav-link" href="post.html">Sample Post</a>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-              <!--<a class="nav-link" href="contact.html">Contact</a>-->
-            <!--</li>-->
-          </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">首页</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html">关于</a>
+                </li>
+                <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="post.html">Sample Post</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="contact.html">Contact</a>-->
+                <!--</li>-->
+            </ul>
         </div>
-      </div>
-    </nav>
-
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-              <h1>天天钢琴</h1>
-              <span class="subheading">天天钢琴，快乐成长</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                Man must explore, and this is exploration at its greatest
-              </h2>
-              <h3 class="post-subtitle">
-                Problems look mighty small from 150 miles up
-              </h3>
-            </a>
-            <p class="post-meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on September 24, 2018</p>
-          </div>
-          <hr>
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-              </h2>
-            </a>
-            <p class="post-meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on September 18, 2018</p>
-          </div>
-          <hr>
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                Science has not yet mastered prophecy
-              </h2>
-              <h3 class="post-subtitle">
-                We predict too much for the next year and yet far too little for the next ten.
-              </h3>
-            </a>
-            <p class="post-meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2018</p>
-          </div>
-          <hr>
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                Failure is not an option
-              </h2>
-              <h3 class="post-subtitle">
-                Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-              </h3>
-            </a>
-            <p class="post-meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on July 8, 2018</p>
-          </div>
-          <hr>
-          <!-- Pager -->
-          <div class="clearfix">
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-          </div>
-        </div>
-      </div>
     </div>
+</nav>
 
-    <hr>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container">
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('/public/img/home-bg.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>钢琴之家</h1>
+                    <span class="subheading">天天钢琴，快乐成长</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <%
+            for(const i in lastestNews){
+                const news = lastestNews[i];
+            %>
+            <div class="post-preview">
+                <a href="<%= news.sourceUrl %>">
+                    <h2 class="post-title">
+                        <%= news.title %>
+                    </h2>
+                    <h3 class="post-subtitle">
+                        <%= news.summary %>
+                    </h3>
+                </a>
+                <p class="post-meta">来源
+                    <a href="#"><%= news.author %></a>
+                    <%= `${news.pubTime.getFullYear()}年${news.pubTime.getMonth() + 1}月${news.pubTime.getDate()}日
+                ${news.pubTime.getHours()}:${news.pubTime.getMinutes()}` %></p>
+            </div>
+            <hr>
+            <% } %>
+            <!-- Pager -->
+            <div class="clearfix">
+                <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                   </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                   </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                   </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
-          </div>
+                        </a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            </div>
         </div>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="/public/vendor/jquery/jquery.min.js"></script>
-    <script src="/public/vendor/bootstrap//public/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="/public/vendor/jquery/jquery.min.js"></script>
+<script src="/public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="/public/js/clean-blog.min.js"></script>
+<!-- Custom scripts for this template -->
+<script src="/public/js/clean-blog.min.js"></script>
 
-  </body>
+</body>
 
 </html>
